tests/ui/missing_poll.stderr
error: macro expansion ignores `;` and any tokens following
 --> tests/ui/missing_poll.rs:8:9
  |
6 |     #[tokio_select]
  |     --------------- caused by the macro expansion here
7 |     match () {
8 |         _ | _ => invalid,
  |         ^^^^^
  |
  = note: the usage of `tokio_select!` is likely invalid in expression context
help: you might be missing a semicolon here
  |
6 |     #[tokio_select];
  |                    +

error: expected `()`
 --> tests/ui/missing_poll.rs:8:9
  |
8 |         _ | _ => invalid,
  |         ^^^^^
